<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/logout"
        android:showAsAction="never"
        android:title="@string/logout1"
        />
    
    <item
        android:id="@+id/logar"
        android:showAsAction="never"
        android:title="@string/login"
        />
    
    
    
    <item
        android:id="@+id/location"
        android:showAsAction="never"
        android:title="@string/deflocal"
        />
    
    
     <item
        android:id="@+id/registar"
        android:showAsAction="never"
        android:title="@string/register"
        />
     
       <item
        android:id="@+id/rpassword"
        android:showAsAction="never"
        android:title="@string/rcpassword"
        />
      
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:title="Carregar Dados"
      />
    
    <item
        android:id="@+id/sair"
        android:showAsAction="never"
        android:title="@string/sair"
        />
    
    
    
</menu>