<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:fillViewport="true">

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="vertical">




		<LinearLayout android:id="@+id/header"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="@layout/header_gradient" android:paddingBottom="5dip"
			android:paddingTop="5dip">

			<!-- Logo Start -->
			<!-- Logo Start -->
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginLeft="10dip"
				android:src="@drawable/logo" />
			<!-- Logo Ends -->
		</LinearLayout>
		<LinearLayout android:id="@+id/LinearLayout1"
			android:layout_width="match_parent" android:layout_height="match_parent"
			android:padding="10.0dip"
			android:orientation="vertical">

			<!-- Header Start -->
	    
	      <!-- Header Ends -->
 
    
	    <!--Social Login Starts -->	

	    <LinearLayout
	        android:id="@+id/LayoutSocial"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:padding="10.0dip">

	        
		    
		    <TextView
		        android:id="@+id/tvInfo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="#000"
		        android:layout_gravity="top|center_horizontal" />
		    
		    <Button
		        android:id="@+id/btLogin"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/logl"
		        android:background="#2778b7"
		        android:textColor="#fff"
		        android:textSize="13dp"
		        android:padding="10dp"
		        android:layout_margin="4dp"
		        android:layout_gravity="center_horizontal"
		        android:onClick="linkedInLogin" />
		    
		  <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="#000"
		        android:layout_gravity="top|center_horizontal" />
		    
		    <Button
		        android:id="@+id/btLoginf"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:layout_margin="4dp"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/logf"
                 android:textColor="#fff"
                 android:textSize="13dp"
                 android:background="#2683c2"
		         android:onClick="facebookLogin" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="#000"
		        android:layout_gravity="top|center_horizontal" />
		    
		    <Button
		        android:id="@+id/btLoging"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:layout_margin="4dp"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/logg"
                 android:textColor="#fff"
                 android:textSize="13dp"
                 android:background="#eb543b"
		        
		        android:onClick="googleplusLogin" />
		
		    <ProgressBar
		        android:id="@+id/pbLoad"
		        android:layout_gravity="center"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:visibility="gone" />
		    
		    
		    
		    <TextView
		        android:id="@+id/tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="#000"
		        android:layout_gravity="top|center_horizontal" />
		    
			<TextView
				android:id="@+id/textView1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="OR" />
	    
	    
	    </LinearLayout>
	    <!--Social Login Ends -->
    
    
	    
    
     
	     <!-- Login Form -->

	     <LinearLayout
	         android:id="@+id/LayouEmail"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:orientation="vertical" >
		     
		     <!-- Email Label -->
		     <EditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
				android:layout_marginTop="5dip"
				android:hint="@string/email"
				android:singleLine="true" />
		      
		      <!-- Password Label -->
			<EditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:ems="10"
				android:hint="@string/password_textview"
				android:password="true"
				android:singleLine="true" >
				<requestFocus />
			</EditText>
	
	          
		     <TableRow  
		          android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:orientation="vertical"
		          android:layout_margin="10dip"
		          android:gravity="center">
		          
	              <CheckBox
		              android:id="@+id/rememberMe"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content" />
	
	              <TextView
	                  android:id="@+id/textView2"
	                  android:layout_width="wrap_content"
	                  android:layout_height="wrap_content"
	                  android:text=" " />
	
	              <TextView
	                  android:layout_width="wrap_content"
		         	  android:layout_height="wrap_content"
		              android:text="@string/remeber" />
	              
			</TableRow>
	        
	          <!-- Login button -->
	          <Button
	              android:id="@+id/login"
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:layout_marginTop="10dip"
	              android:text="@string/login" />
		
		</LinearLayout>          
        
	   <LinearLayout
	       android:id="@+id/LayoutRegister"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="vertical" >
            
            <TextView
			    android:id="@+id/forget"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:text="@string/forget"
			    android:textColor="#00CCFF" />
          
          
          <TableRow  
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:orientation="vertical"
	          android:layout_margin="10dip"
	          android:gravity="center">
	          
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/dont" />

              <TextView
                
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text=" " />

              <TextView
                  android:id="@+id/register"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/signhere"
                  android:textColor="#00CCFF" />
        </TableRow>
        </LinearLayout>  
    	</LinearLayout>
         <!-- Footer Start -->

      <LinearLayout
          android:id="@+id/footer"
          android:layout_width="fill_parent"
          android:layout_height="80dip"
          android:layout_alignParentBottom="true"
          android:background="@layout/footer_repeat"
          android:orientation="horizontal"
          android:padding="10dip" />
      
      <!-- Footer Ends -->
    
	</LinearLayout>
</ScrollView>
